# pp2p

./: .gitattributes  .gitignore  README.md  build_onionrelay_windows.ps1  p4.py  p4_core.py  requirements.txt
.github/workflows/: build-onionrelay-unix.yml  publish-maven-central.yml  publish-npm.yml  publish-python.yml
.github/workflows-disabled/: build-p4-core.yml  publish-maven-central.yml  publish-python-legacy.yml  publish-python.yml  update-packagist.yml
bindings/: README.md
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/: p4_core_cpp.hpp
bindings/cpp/src/: p4_core_cpp.cpp
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/io/github/masterjx9/p4/: P4Core.java
bindings/javascript/: README.md  p4_core.d.ts  p4_core.js  package.json  pp2p_core.js
bindings/javascript/scripts/: postinstall.js
bindings/php/: README.md
bindings/php/src/: P4Core.php
bindings/python/: README.md  pyproject.toml
bindings/python/p4_core/: __init__.py
bindings/python/pp2p_core/: __init__.py
bindings/python/pp2p_core/native/: __init__.py
bindings/python_legacy/: pyproject.toml
onionrelay_src/: autogen.sh
scripts/: build_onionrelay_unix.sh
