[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pp2p_core"
version = "0.1.1"
description = "Python ctypes SDK for the PP2P Rust core"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "PP2P" }]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["pp2p_core"]
