[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p4_core"
version = "0.2.3"
description = "Python ctypes SDK for the P4 Rust core"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "P4" }]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true
packages = ["p4_core", "p4_core.native"]

[tool.setuptools.package-data]
p4_core = ["native/*", "native/*/*", "onionrelay/*", "onionrelay/*/*"]
"p4_core.native" = ["*", "*/*"]


